--- a/Server/src/CoreWeb1/project.json
+++ b/Server/src/CoreWeb1/project.json
@@ -8,6 +8,7 @@
 		"Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
 		"Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-final",
 		"Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
+		"Microsoft.AspNetCore.WebSockets.Server": "0.1.0-rc2-final",
 		"Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-final",
 		"Microsoft.Extensions.Configuration.FileExtensions": "1.0.0-rc2-final",
 		"Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
@@ -19,8 +20,7 @@
 			"type": "build",
 			"version": "1.0.0-preview1-final"
 		},
-		"Microsoft.EntityFrameworkCore.Sqlite": "1.0.0-rc2-final"
-	},
+		"Microsoft.EntityFrameworkCore.Sqlite": "1.0.0-rc2-final"	},
 
 	"tools": {
 		"Microsoft.AspNetCore.Server.IISIntegration.Tools": {
