--- a/Client/CoreClient/CoreClient.CSharp.csproj
+++ b/Client/CoreClient/CoreClient.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -60,6 +58,12 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -78,14 +82,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Chat\ChatClient.cs" />
-    <Compile Include="Assets\Chat\ChatModel.cs" />
     <Compile Include="Assets\Chat\ChatDemo.cs" />
+    <Compile Include="Assets\Chat\ChatModel.cs" />
     <Compile Include="Assets\Score\ScoreDemo.cs" />
     <Compile Include="Assets\Score\ScoreModel.cs" />
     <Compile Include="Assets\Utilities\MonoHelper.cs" />
     <Compile Include="Assets\Utilities\RestClient.cs" />
     <Compile Include="Assets\Utilities\UnityWebRequestExt.cs" />
+    <Compile Include="Assets\Utilities\WWWExt.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
