--- a/Server/src/CoreWeb1/project.json
+++ b/Server/src/CoreWeb1/project.json
@@ -1,70 +1,56 @@
 {
-  "dependencies": {
-    "Microsoft.NETCore.App": {
-      "version": "1.0.0-rc2-3002702",
-      "type": "platform"
-    },
-    "Microsoft.ApplicationInsights.AspNetCore": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.WebSockets.Server": "0.1.0-rc2-final",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
-    "Microsoft.EntityFrameworkCore.Tools": {
-      "type": "build",
-      "version": "1.0.0-preview1-final"
-    },
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0-rc2-final"
-  },
-  "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
-      "version": "1.0.0-preview1-final",
-      "imports": "portable-net45+win8+dnxcore50"
-    },
-    "Microsoft.EntityFrameworkCore.Tools": {
-      "imports": [
-        "portable-net451+win8"
-      ],
-      "version": "1.0.0-preview1-final"
-    }
-  },
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "dnxcore50",
-        "portable-net45+win8"
-      ]
-    }
-  },
-  "buildOptions": {
-    "emitEntryPoint": true,
-    "preserveCompilationContext": true,
-    "debugType": "portable"
-  },
-  "runtimeOptions": {
-    "gcServer": true
-  },
-  "publishOptions": {
-    "include": [
-      "wwwroot",
-      "Views",
-      "appsettings.json",
-      "web.config",
-      "docker-compose.yml",
-      "docker-compose.yml.debug",
-      "dockerfile.debug",
-      "dockerfile"
-    ]
-  },
-  "scripts": {
-    "postpublish": [
-      "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%"
-    ]
-  }
+	"dependencies": {
+		"Microsoft.NETCore.App": {
+			"version": "1.0.0",
+			"type": "platform"
+		},
+
+		"Microsoft.AspNetCore.Mvc": "1.0.0",
+		"Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
+		"Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+		"Microsoft.AspNetCore.StaticFiles": "1.0.0",
+		"Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
+		"Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+		"Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
+		"Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
+		"Microsoft.Extensions.Configuration.Json": "1.0.0",
+		"Microsoft.Extensions.Logging": "1.0.0",
+		"Microsoft.Extensions.Logging.Console": "1.0.0",
+		"Microsoft.Extensions.Logging.Debug": "1.0.0"
+	},
+	"tools": {
+		"Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+		"Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
+	},
+	"frameworks": {
+		"netcoreapp1.0": {
+			"imports": [
+				"dotnet5.6",
+				"portable-net45+win8"
+			]
+		}
+	},
+	"buildOptions": {
+		"emitEntryPoint": true,
+		"preserveCompilationContext": true
+	},
+	"runtimeOptions": {
+		"configProperties": {
+			"System.GC.Server": true
+		}
+	},
+	"publishOptions": {
+		"include": [
+			"wwwroot",
+			"Views",
+			"Modules/**/Views",
+			"appsettings.json",
+			"web.config",
+			"dockerfile"
+		]
+	},
+	"scripts": {
+		"prepublish": [ "bower install", "dotnet bundle" ],
+		"postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ],
+	}
 }
