--- a/Server/src/CoreWeb1/Dockerfile
+++ b/Server/src/CoreWeb1/Dockerfile
@@ -1,5 +1,5 @@
 # dotnet publish
-# docker build -t nventi/coreweb:1.8 /bin/Debug/netcoreapp1.0/publish/
+# docker build -t nventi/coreweb:1.8 bin/Debug/netcoreapp1.0/publish/
 # docker run -d -P nventi/coreweb:1.8
 # docker ps -a
 # docker logs <key>
