--- a/Server/src/CoreWeb1/project.json
+++ b/Server/src/CoreWeb1/project.json
@@ -51,7 +51,7 @@
 		]
 	},
 	"scripts": {
-		"prepublish": [ "bower install", "dotnet bundle" ],
-		"postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ],
+		"prepublish": [ "dotnet bundle" ],
+		"postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
 	}
 }
