--- a/Server/src/CoreWeb1/Dockerfile
+++ b/Server/src/CoreWeb1/Dockerfile
@@ -1,17 +1,14 @@
 # dotnet publish
-# docker build -t nventi/coreweb:1.8 bin/Debug/netcoreapp1.0/publish/
-# docker run -d -P nventi/coreweb:1.8
+# docker build -t nventi/coreweb:x.x bin/Debug/netcoreapp1.0/publish/
+# docker run -d -P 5000:5000 nventi/coreweb:x.x
 # docker ps -a
-# docker logs <key>
-
+# docker logs
 
 FROM microsoft/dotnet:latest
 
-ADD . /app
-
-WORKDIR /app
+COPY bin/Debug/netcoreapp1.0/publish /publish/
 
 ENV ASPNETCORE_URLS http://*:80
 EXPOSE 80
 
-ENTRYPOINT dotnet CoreWeb1.dll
+ENTRYPOINT dotnet /publish/CoreWeb1.dll
