--- a/Server/src/CoreWeb1/project.json
+++ b/Server/src/CoreWeb1/project.json
@@ -1,52 +1,55 @@
 {
-	"dependencies": {
-		"Microsoft.NETCore.App": {
-			"version": "1.0.0",
-			"type": "platform"
-		},
-
-		"Microsoft.AspNetCore.Mvc": "1.0.0",
-		"Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
-		"Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
-		"Microsoft.AspNetCore.StaticFiles": "1.0.0",
-		"Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
-		"Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
-		"Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
-		"Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
-		"Microsoft.Extensions.Configuration.Json": "1.0.0",
-		"Microsoft.Extensions.Logging": "1.0.0",
-		"Microsoft.Extensions.Logging.Console": "1.0.0",
-		"Microsoft.Extensions.Logging.Debug": "1.0.0"
-	},
-	"tools": {
-		"Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
-		"Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
-	},
-	"frameworks": {
-		"netcoreapp1.0": {
-			"imports": [
-				"dotnet5.6",
-				"dnxcore50",
-				"portable-net45+win8"
-			]
-		}
-	},
-	"buildOptions": {
-		"emitEntryPoint": true,
-		"preserveCompilationContext": true
-	},
-	"runtimeOptions": {
-		"configProperties": {
-			"System.GC.Server": true
-		}
-	},
-	"publishOptions": {
-		"include": [
-			"wwwroot",
-			"Views",
-			"appsettings.json",
-			"web.config",
-			"Dockerfile"
-		]
-	},
+  "dependencies": {
+    "Microsoft.NETCore.App": {
+      "version": "1.0.0",
+      "type": "platform"
+    },
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0",
+    "Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Microsoft.Extensions.Logging.Debug": "1.0.0"
+  },
+  "tools": {
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
+  },
+  "frameworks": {
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8"
+      ]
+    }
+  },
+  "buildOptions": {
+    "emitEntryPoint": true,
+    "preserveCompilationContext": true,
+    "debugType": "portable"
+  },
+  "runtimeOptions": {
+    "configProperties": {
+      "System.GC.Server": true
+    }
+  },
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "Views",
+      "appsettings.json",
+      "web.config",
+      "Dockerfile",
+      "docker-compose.yml",
+      "docker-compose.debug.yml",
+      "Dockerfile.debug"
+    ]
+  }
 }
