--- a/Server/src/CoreWeb1/Dockerfile
+++ b/Server/src/CoreWeb1/Dockerfile
@@ -1,17 +1,21 @@
+#dotnet build
+#dotnet publish
+#cd bin/Debug/netcoreapp1.0/publish
+#docker build -t nventi/coreweb:latest
+#docker run -d -p 5000:5000 nventi/coreweb:latest
+#docker ps
+
 FROM microsoft/dotnet:latest
 
-RUN apt-get update && apt-get install sqlite3 libsqlite3-dev
-
-COPY . /app
-
+# Set the Working Directory
 WORKDIR /app
 
-RUN ["dotnet", "restore"]
+# Configure the listening port
+ENV ASPNETCORE_URLS http://*:5000
+EXPOSE 5000
 
-RUN ["dotnet", "build"]
+# Copy the app
+COPY . /app
 
-RUN ["dotnet", "ef", "database", "update"]
-
-EXPOSE 5000/tcp
-
-ENTRYPOINT ["dotnet", "run", "--server.urls", "http://0.0.0.0:5000"]
+# Start the app
+ENTRYPOINT dotnet CoreWeb1.dll
